enhancement/issue 96 icons positioning and alignment tweaks (#173)

--- a/src/components/copy-to-clipboard-block/ctc-block.css
+++ b/src/components/copy-to-clipboard-block/ctc-block.css
@@ -12,7 +12,7 @@
     float: left;
     cursor: pointer;
     width: var(--size-fluid-5);
-    margin: var(--size-4) var(--size-2) var(--size-1) var(--size-2);
+    margin: var(--size-3) var(--size-1) var(--size-1) var(--size-1);
     border-bottom: 2px solid transparent;
     padding: var(--size-1);
     display: flex;
@@ -96,6 +96,7 @@
 
   & pre {
     border: 2px solid var(--color-white);
+    margin: var(--size-3) 0 var(--size-2) 0;
   }
 
   & .copy-icon {
